examples/errors/instance_type_error.ik
type Count class:
    fn count(Self) Int

instance Count Bool:
    fn count(self):
        return "bad return type"

fn main():
    print("")
